--- a/2day/css/style.css
+++ b/2day/css/style.css
@@ -1,85 +1,85 @@
-a{
-	font-size: calc(100px / 2);
-	margin: calc(50px * 2);
-	text-decoration:none;
-	color: black;
-	line-height: 80px;
+* {
+    margin: 0px;
+    padding: 0px;
+    
+}
+:root {
+    --n: calc(1vw + 1vh);
+    --transition: 1.25s cubic-bezier(.2, .5, 0, 1);
+    --transition-cursor: 2s cubic-bezier(.05, .5, 0, 1);
+}
+    @font-face {
+    font-family: arsenal;
+    src: url(../fonts/arsenal-regular.woff2);
+}
+
+.magic-list {
+    font-family: arsenal;
+    font-size: calc(var(--n) * 2);
+    padding: calc(var(--n) * 2);
+}
+.magic-list__item {
+    cursor: none;
+    color: var(--color);
+    text-decoration: none;
+    display: block;
+    line-height: .9;
+    padding: calc(var(--n) * 8) calc(var(--n) * 8);
 
 }
+.magic-list__item:first-child {
+    border-top: 1.5px solid var(--color);
+}
+.magic-list__header {
+    transition: transform var(--transition);
+}
+.magic-list__item::before {
+    position: absolute;
+    font-size: calc(var(--n) * .90);
+    margin-left: calc(var(--n) * -1.75);
+    margin-top: calc(var(--n) / 2);
+    letter-spacing: .5px;
+    transition: transform var(--transition);
+}
+.magic-list__item:hover .magic-list__header, .magic-list__item:hover::before {
+    transform: translate3d(calc(var(--n) * -5), 0, 0);
+}
+.cursor {
+    --width: calc(var(--n) * 20);
+    --height: calc(var(--n) * 15);
+    position: fixed;
+    width: var(--width);
+    height: 0;
+    top: calc(var(--height) * -.5);
+    left: calc(var(--width) * -.5);
+    overflow: hidden;
+    transform: translate3d(var(--move-x), var(--move-y), 0);
+    transition: transform var(--transition-cursor), height 1s ease;
+    z-index: -1;
+    will-change: transform;
+}
+.magic-list__item:hover .cursor {
+    height: var(--height);
+}
+.cursor__image {
+    --cursor-transform: translate3d(calc(var(--move-x) / -5), calc(var(--move-y) / -5), 0);
+    position: relative;
+    width: calc(var(--width) * 1.75);
+    height: calc(var(--height) * 1.75);
+    top: calc(var(--height) * -.1.75);
+    left: calc(var(--width) * -.1.75);
+    background-size: cover;
+    background-position: center;
+    transform: var(--cursor-transform) scale(0.5);
+    transition: transform var(--transition-cursor);
+}
+.magic-list__item:hover .cursor__image {
+    transform: var(--cursor-transform) scale(0.5);
+}
+
 .line{
-	background: black;
 	margin-left: 30px;
 	margin-right: 30px;
-}
-
-*{
-	font-family: 'arsenal-regular', arial;
-}
-:root{
---color: #141414;
---resh:calc(1vw + 1vh);
---sec1:1,25s cubic-bezies(.2,.5,0,1)
---sec2:2s cubic-bezies(.05, .5, 0, 1);
-}
-
-@font-face{
-	src:url("../fonts/arsenal-regular.woff2");
-	font-family:'arsenal-regular' arsenal-regular.woff2;
-}
-
-body{
-	background:#B0C4DE;
-}
-
-.magic-list{
-
-}
-
-.magic-list__item{
-
-}
-
-.magic-list__item:first-child{
-	
-}
-
-.magic-list__header{
-	transition: transform var(--transition);
-
-}
-
-.magic-list__item::before {
-	transition: transform var(--transition);
-
-}
-
-.magic-list__item:hover .magic-list__header,.magic-list__item:hover::before {
-
-}
-
-.cursor{
-
-}
-
-.magic-list__item:hover .cursor{
-	
-}
-
-.cursor__image{
-	transition: transform var(--transition-cursor);
-}
-
-.magic-list__item:hover .cursir__image {
-
-}
-#move:hover{
-	transform: translate(50px,0);
-}
-.object{
-	transition: all 0.3s ease-in-out;
-}
-
-.cifri{
-	font-size:15pt ;
+	background: black;
 }
 
